# docker_files

./: Amr_wasd_teleop.py  README.md  compose.yaml  create_users.sh  dev-run-anomaly-detection.sh  dev-run-backend.sh  dev-run-fer.sh  dev-run.sh  dockerTeardown.sh  initSrc.sh  initSrcBasic.sh  initialize_host.sh  laptop-setup.sh  make_netops_group.sh  mapping-run.sh  rmw_profile.xml  run.sh  setup_cart_host_ubuntu24.sh  setup_cart_host_ubuntu24.sh.save  sp26usernames.txt  student_auth_setup.sh
cart_control/cart_launch/launch/: autonomous_launcher.launch.py
cart_control/localization_launch/launch/: cameras.launch.py
configs/: conky.conf
motor_control/resource/: startup_script.sh
scripts/: velodyne-net-setup.sh
services/anomaly_detection/: Dockerfile  entrypoint.sh  requirements.txt
services/backend/: Dockerfile  entrypoint.sh
services/fer/: Dockerfile  entrypoint.sh  requirements.txt
services/frontend/: Dockerfile  entrypoint.sh
shared_ros_resources/anomaly_msg/: CMakeLists.txt  package.xml
shared_ros_resources/anomaly_msg/msg/: AnomalyLog.msg
